--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,3 +4,9 @@
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
+
+.shadow {
+  box-shadow: 5px 4px 14px -3px rgba(95, 95, 95, 0.75);
+  -webkit-box-shadow: 5px 4px 14px -3px rgba(95, 95, 95, 0.75);
+  -moz-box-shadow: 5px 4px 14px -3px rgba(95, 95, 95, 0.75);
+}
